--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,6 +1,6 @@
 .form {
   margin: 0 auto 20px auto;
-  width: 360px;
+  width: 400px;
   padding: 20px;
   border: 1px solid black;
   border-radius: 4px;
@@ -12,7 +12,7 @@
   margin-bottom: 16px;
 }
 
-.input {
+.label {
   padding: 4px;
   font-size: 18px;
   width: 340px;
